<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.main.MainActivity"
        tools:showIn="@layout/activity_main" >
        <ImageView
            android:id="@+id/banner"
            android:layout_width="0dp"
            android:layout_height="196dp"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_download"/>

        <RadioGroup
            android:id="@+id/download_option_radio_group"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toTopOf="@+id/custom_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/banner">

            <RadioButton
                style="@style/Widget.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/download_by_glide" />

            <RadioButton
                style="@style/Widget.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/download_by_loadapp" />

            <RadioButton
                style="@style/Widget.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/download_by_retrofit" />
        </RadioGroup>

        <com.udacity.load.LoadingButton
            android:id="@+id/custom_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:loadingBackgroundColor="?attr/colorPrimaryDark"
            app:loadingDefaultBackgroundColor="?attr/colorPrimary"
            app:loadingDefaultText="@string/button_default_text"
            app:loadingText="@string/button_loading"
            app:loadingTextColor="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>